argocd-ingress-NEW-SSL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-new
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:                       # Добавляем TLS
  - hosts:
    - argo-cd.neliub.ru
    secretName: argocd-tls-secret  # Имя секрета с сертификатом
  rules:
  - host: argo-cd.neliub.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
