ingress-hosts-NEW.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: k8s1.neliub.ru
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc-neliub-as
            port:
              number: 80
